--- a/src/app/admin/report-manager/report-manager.component.html
+++ b/src/app/admin/report-manager/report-manager.component.html
@@ -12,11 +12,17 @@
             <div class="tab_btn" routerLinkActive="active">
                 <a href="javascript:;" routerLink="/admin/reports/item-sale-report">Item Sales Report</a>
             </div>
+            <div class="tab_btn" routerLinkActive="active">
+                <a href="javascript:;" routerLink="/admin/reports/account-reports/account-basic-summary">Account Basic Summary</a>
+            </div>
+            <div class="tab_btn" routerLinkActive="active">
+                <a href="javascript:;" routerLink="/admin/reports/account-reports/profit-and-loss">Profit and Loss</a>
+            </div>
         </div>
         <div class="tab_body pa-20">
             <router-outlet></router-outlet>
         </div>
-        
+
     </div>
 
 </div>
