--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2167,6 +2167,9 @@ label.mat-checkbox-layout {
             padding: 0!important;
         }
     }
+    @page {
+        margin: 0;
+    }
     app-root {
         display: none !important;
     }
