--- a/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.html
+++ b/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.html
@@ -40,7 +40,7 @@
             <ng-container *ngFor="let item of orderData?.comboItems;let i=index;">
                 <tr>
                     <td class="quantity">x{{ item.quantity }}</td>
-                    <td class="description">{{ item.productName }} {{item.advancedPriceTitle ? '('+ item.advancedPriceTitle +')' : ''}}</td>
+                    <td class="description">{{ item.comboTitle }}</td>
                     <td class="price">{{ item.totalPrice | currency: '':'' }}</td>
                 </tr>
             </ng-container>
