--- a/src/app/admin/orders/components/new-order/new-order.component.html
+++ b/src/app/admin/orders/components/new-order/new-order.component.html
@@ -353,7 +353,7 @@
                                 </div>
                             </div>
                         </mat-tab>
-                        <mat-tab *ngIf="items['controls'].length > 0">
+                        <mat-tab *ngIf="items['controls'].length > 0 || comboItems['controls'].length > 0">
                             <ng-template mat-tab-label>
                                 <mat-icon class="example-tab-icon">receipt</mat-icon>
                                 <p class="mb-0 ml-5 px-0"> Bill</p>
