--- a/src/app/admin/product-combo/product-combo-update/product-combo-update.component.html
+++ b/src/app/admin/product-combo/product-combo-update/product-combo-update.component.html
@@ -52,7 +52,7 @@
                       <div class="col-12">
                           <mat-form-field appearance="fill" class="w-100">
                               <mat-label>Packaging Charges</mat-label>
-                              <input matInput formControlName="packagingCharges" readonly type="text">
+                              <input matInput formControlName="packagingCharges" type="text">
                           </mat-form-field>
                       </div>
                   </div>
