--- a/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.html
+++ b/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.html
@@ -83,7 +83,7 @@
     </table>
 
     <p>&nbsp;</p>
-    <p class="centered">Thank You :(
+    <p class="centered">Thank You &#128522;
         <br>Visit again</p>
 </div>
 
