--- a/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.html
+++ b/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.html
@@ -74,7 +74,7 @@
                 <th class="description">Round Off</th>
                 <th class="price">- {{ orderData?.roundOfAmount | currency: '':'' }}</th>
             </tr>
-            <tr>
+            <tr class="totalRow">
                 <th class="quantity"></th>
                 <th class="description">TOTAL</th>
                 <th class="price">{{ orderData?.orderAmount | currency: '':'' }}</th>
