--- a/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.html
+++ b/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.html
@@ -11,7 +11,7 @@
         <p class="mb-0">{{ savedOrderData?.created_at | datex: 'DD-MM-YYYY hh:mm A' }}</p>
     </div>
     <div class="d-flex justify-content-between">
-        <p class="mb-0">No : #{{ savedOrderData?.id | slice:15:20 }}</p>
+        <p class="mb-0">No : #{{ savedOrderData?.id | slice:3:20 }}</p>
     </div>
     <div>
         <ng-container *ngFor="let item of orderData?.tables; let i=index;">
@@ -83,7 +83,7 @@
     </table>
 
     <p>&nbsp;</p>
-    <p class="centered">Thank You &#128522;
+    <p class="centered">Thank You ☺
         <br>Visit again</p>
 </div>
 
